--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
           смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
           километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li>Часовых поясов 11</li>
-          <li>Объектов природного наследия ЮНЕСКО 12</li>
-          <li>Объектов культурного наследия ЮНЕСКО 16</li>
-          <li>Природных заповедников 105</li>
-          <li>Фэропортов 241</li>
+          <li>Часовых поясов <span class="intro__list_number">11</span></li>
+          <li>Объектов природного наследия ЮНЕСКО <span class="intro__list_number">12</span></li>
+          <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list_number">16</span></li>
+          <li>Природных заповедников <span class="intro__list_number">105</span></li>
+          <li>Aэропортов <span class="intro__list_number">241</span></li>
         </ul>
       </section>
     </main>
