--- a/index.html
+++ b/index.html
@@ -40,69 +40,51 @@
   </header>
 
   <main class="content">
-    <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
-      <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-      <img src="./images/lead-polka.jpg" alt="Девушка, лежащая на полке в вагоне поезда и смотрящая в окно."
-        class="lead__image">
-      <p class="lead__caption">Ваша полка — верхняя</p>
-    </section>
+    <div class="upper-content">
+      <section class="lead section-space">
+        <h1 class="title lead__title">Путешествия по России</h1>
+        <h3 class="subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+        <img src="./images/lead-polka.jpg" alt="Девушка, лежащая на полке в вагоне поезда и смотрящая в окно."
+          class="lead__image">
+        <p class="lead__caption">Ваша полка — верхняя</p>
+      </section>
 
-    <section class="intro">
-      <h2 class="intro__title">Чего мы там не видели?</h2>
-      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-        провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-        вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
-        красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова —
-        смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
-        километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-      <ul class="intro__list">
-        <li class="intro__list-item">Часовых поясов <span class="intro__list-number">11</span></li>
-        <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span>
-        </li>
-        <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span>
-        </li>
-        <li class="intro__list-item">Природных заповедников <span class="intro__list-number">105</span></li>
-        <li class="intro__list-item">Aэропортов <span class="intro__list-number">241</span></li>
-      </ul>
-    </section>
+      <section class="intro section-space">
+        <h2 class="title intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
+          красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова —
+          смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
+          километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+        <ul class="intro__list">
+          <li class="intro__list-item">Часовых поясов <span class="intro__list-number">11</span></li>
+          <li class="intro__list-item">Объектов природного наследия ЮНЕСКО <span class="intro__list-number">12</span>
+          </li>
+          <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО <span class="intro__list-number">16</span>
+          </li>
+          <li class="intro__list-item">Природных заповедников <span class="intro__list-number">105</span></li>
+          <li class="intro__list-item">Aэропортов <span class="intro__list-number">241</span></li>
+        </ul>
+      </section>
+    </div>
 
-    <section class="photo-grid">
-      <figure class="photo-grid__item"><img src="./images/photo-grid-train.jpg" class="photo-grid__image"
-          alt="Вид из окна поезда">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__image"
-          alt="Вид с высоты на горы"></figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" class="photo-grid__image"
-          alt="Собака, стоящая на снопе сена и смотрящая на туман">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" class="photo-grid__image"
-          alt="Лес в районе города Сочи">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" class="photo-grid__image"
-          alt="Машина, стоящая на прощрачном толстом льду">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" class="photo-grid__image"
-          alt="Вид на озеро Байкал">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" class="photo-grid__image"
-          alt="Вид на гору Эльбрус">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__image"
-          alt="Волноломы">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__image"
-          alt="Вид на Камчатку">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__image"
-          alt="Вид на вулкан на Камчатке">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__image"
-          alt="Вид на окрестности озера Байкал">
-      </figure>
-      <figure class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" class="photo-grid__image"
-          alt="Природный парк краевого значения Ергаки">
-      </figure>
+    <section class="photo-grid section-space">
+      <img src="./images/photo-grid-train.jpg" class="photo-grid__image" alt="Вид из окна поезда">
+      <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__image" alt="Вид с высоты на горы">
+      <img src="./images/photo-grid-tuman.jpg" class="photo-grid__image"
+        alt="Собака, стоящая на снопе сена и смотрящая на туман">
+      <img src="./images/photo-grid-sochi.jpg" class="photo-grid__image" alt="Лес в районе города Сочи">
+      <img src="./images/photo-grid-arisa.jpg" class="photo-grid__image"
+        alt="Машина, стоящая на прощрачном толстом льду">
+      <img src="./images/photo-grid-baikal.jpg" class="photo-grid__image" alt="Вид на озеро Байкал">
+      <img src="./images/photo-grid-elbrus.jpg" class="photo-grid__image" alt="Вид на гору Эльбрус">
+      <img src="./images/photo-grid-kondratiev.jpg" class="photo-grid__image" alt="Волноломы">
+      <img src="./images/photo-grid-kamchatka-1.jpg" class="photo-grid__image" alt="Вид на Камчатку">
+      <img src="./images/photo-grid-kamchatka-2.jpg" class="photo-grid__image" alt="Вид на вулкан на Камчатке">
+      <img src="./images/photo-grid-baikal-2.jpg" class="photo-grid__image" alt="Вид на окрестности озера Байкал">
+      <img src="./images/photo-grid-ergaki.jpg" class="photo-grid__image" alt="Природный парк краевого значения Ергаки">
+
     </section>
 
     <section class="places">
