--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <main class="content">
     <div class="upper-content">
-      <section class="lead section-space">
+      <section class="lead">
         <h1 class="title lead__title">Путешествия по России</h1>
         <h3 class="subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
         <img src="./images/lead-polka.jpg" alt="Девушка, лежащая на полке в вагоне поезда и смотрящая в окно."
@@ -49,7 +49,7 @@
         <p class="lead__caption">Ваша полка — верхняя</p>
       </section>
 
-      <section class="intro section-space">
+      <section class="intro">
         <h2 class="title intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -69,7 +69,7 @@
       </section>
     </div>
 
-    <section class="photo-grid section-space">
+    <section class="photo-grid">
       <img src="./images/photo-grid-train.jpg" class="photo-grid__image" alt="Вид из окна поезда">
       <img src="./images/photo-grid-atharva-tulsi.jpg" class="photo-grid__image" alt="Вид с высоты на горы">
       <img src="./images/photo-grid-tuman.jpg" class="photo-grid__image"
@@ -181,7 +181,28 @@
       </div>
       </div>
     </section>
+
+    <section class="cover">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+        <h2 class="cover__title">До Байкала «на собаках»</h2>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на
+          электричках.</p>
+      </a>
+    </section>
   </main>
+
+  <footer class="footer">
+    <nav class="footer__navigation">
+      <ul class="footer__list">
+        <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__list-link">Карты</a></li>
+        <li class="footer__list-item"><a href="https://yandex.ru/pogoda" class="footer__list-link">Погода</a></li>
+        <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__list-link">Расписание</a></li>
+        <li class="footer__list-item"><a href="https://calendar.yandex.ru" class="footer__list-link">Календарь</a></li>
+        <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__list-link">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy; 2020. Александр</p>
+  </footer>
 </body>
 
 </html>
