--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <main class="content">
     <div class="upper-content">
       <section class="lead">
-        <h1 class="title lead__title">Путешествия по России</h1>
-        <p class="subtitle lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="./images/lead-polka.jpg" alt="Девушка, лежащая на полке в вагоне поезда и смотрящая в окно."
           class="lead__image">
         <p class="lead__caption">Ваша полка — верхняя</p>
