--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </section>
 
       <section class="intro">
-        <h2 class="title intro__title">Чего мы там не видели?</h2>
+        <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
           вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти
@@ -162,6 +162,7 @@
     </section>
 
     <section class="cover">
+      <div class="cover__background"></div>
       <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link" target="_blank">
         <h2 class="cover__title">До Байкала «на собаках»</h2>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на
